--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>мозги</header>
             <br>
             <br>
-      <h1>Тима привет</h1>
+      <h1>человеческий мозг</h1>
       <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Brain_090407.jpg">
       <h3>Отделы мозга млекопитающих</h3>
       <p class="o">Мозг млекопитающих включает в себя следующие отделы:</p>
