--- a/index.html
+++ b/index.html
@@ -283,7 +283,11 @@ Gray719.png
 Гипоталамус управляет деятельностью эндокринной системы человека благодаря тому, что его нейроны способны выделять нейроэндокринные трансмиттеры (либерины и статины), стимулирующие или угнетающие выработку гормонов гипофизом. Иными словами, гипоталамус, масса которого не превышает 5 % мозга, является центром регуляции эндокринных функций, он объединяет нервные и эндокринные регуляторные механизмы в общую нейроэндокринную систему. Гипоталамус образует с гипофизом единый функциональный комплекс, в котором первый играет регулирующую, второй — эффекторную роль.</p>
 <iframe width="560px" height="315px" src="https://www.youtube.com/embed/Nji8lUkWCSM" title="Головной мозг: строение и функции. Краткий обзор" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
-<button><a href=" https://22012haggi.github.io/kkkk/"><img class="lol" src="https://static.doc.ua/uploads/1/2/6/8/2/126824/bg/site_blog_11_2.png"></a></button>
+<nav>
+            <a href="https://22012haggi.github.io/kkkk/">10 интересных фактов о нашем мозге</a>
+            <br>
+                <a href="https://22012haggi.github.io/hhhhhhh/">ЧТО ЗНАЕТ НАУКА О МОЗГЕ</a>
+        </nav>
         <a class="eee" href="#">Наверх</a>
 <footer>мозги</footer>
 </body>
