--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ Gray719.png
         
             <a href="https://22012haggi.github.io/kkkk/">10 интересных фактов о нашем мозге</a>
             <br>
-                <a href="https://22012haggi.github.io/hhhhhhh/">ЧТО ЗНАЕТ НАУКА О МОЗГЕ</a>
+                <a class="rf" href="https://22012haggi.github.io/hhhhhhh/">ЧТО ЗНАЕТ НАУКА О МОЗГЕ</a>
         </nav>
         <a class="eee" href="#">Наверх</a>
 <footer>мозги</footer>
