--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ Gray719.png
         <tr>
         <td>
             <br>
-                <a class="rf" href="https://22012haggi.github.io/hhhhhhh/">ЧТО ЗНАЕТ НАУКА О МОЗГЕ</a>
+                <a class="rf" href="https://22012haggi.github.io/hhhhhhh/">Что знает наука о мозге</a>
         </td>
         </tr>
         </nav>
