--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
                 
         <title>Мозг</title>
      <title><img src="https://indicator.ru/thumb/1500x0/filters:quality(75):no_upscale()/imgs/2019/08/05/10/3488832/529fd43b4d3c01a691657db144be3f849d1f18cf.jpg"></title>
-                <meta name="google-site-verification" content="AFnzTXod95TaaaysROxN2PIN_3dXmZqbMKiezFFyILg" />
+                <meta name="google-site-verification" content="AFnzTXod95TaaaysROxN2PIN_3dXmZqbMKiezFFyILg" /></title>
     </head>
     <body>
       
