--- a/index.html
+++ b/index.html
@@ -286,13 +286,13 @@ Gray719.png
 <nav>
         <tr>
         <td>
-            <a href="https://22012haggi.github.io/kkkk/">10 интересных фактов о нашем мозге</a>
+            <a  class="rrrr" href="https://22012haggi.github.io/kkkk/">10 интересных фактов о нашем мозге</a>
         </td>
         </tr>
         <tr>
         <td>
             <br>
-                <a class="rf" href="https://22012haggi.github.io/hhhhhhh/">Что знает наука о мозге</a>
+                <a class="rrrr" href="https://22012haggi.github.io/hhhhhhh/">Что знает наука о мозге</a>
         </td>
         </tr>
         </nav>
